# LoulouteBot

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  configuration.cpp  configuration.h  logger.cpp  main.cpp
